# geant4lib

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pr-badge.yml  pull_request_template.md
.github/workflows/: cmake.yml  frameworkPR.yml  frameworkValidation.yml  validation.yml
inc/: TRestGeant4AnalysisProcess.h  TRestGeant4BiasingInfo.h  TRestGeant4BiasingVolume.h  TRestGeant4BlobAnalysisProcess.h  TRestGeant4CosmicNeutronTaggingAnalysisProcess.h  TRestGeant4DataEvent.h  TRestGeant4DataHits.h  TRestGeant4DataSteps.h  TRestGeant4DataTrack.h  TRestGeant4Event.h  TRestGeant4EventViewer.h  TRestGeant4ExperimentalEvent.h  TRestGeant4ExperimentalStep.h  TRestGeant4ExperimentalTrack.h  TRestGeant4Geometry.h  TRestGeant4GeometryInfo.h  TRestGeant4Hits.h  TRestGeant4Metadata.h  TRestGeant4NeutronTaggingProcess.h  TRestGeant4Particle.h  TRestGeant4ParticleCollection.h  TRestGeant4ParticleCollectionDecay0.h  TRestGeant4ParticleSource.h  TRestGeant4ParticleSourceCosmics.h  TRestGeant4ParticleSourceCry.h  TRestGeant4ParticleSourceDecay0.h  TRestGeant4PhysicsInfo.h  TRestGeant4PhysicsLists.h  TRestGeant4PrimaryGenerator.h  TRestGeant4PrimaryGeneratorInfo.h  TRestGeant4QuenchingProcess.h  TRestGeant4Track.h  TRestGeant4VetoAnalysisProcess.h
macros/: REST_Geant4_FindGammasEmitted.C  REST_Geant4_FindIsotopes.C  REST_Geant4_GenerateResponseMatrix.C  REST_Geant4_GetBiasingError.C  REST_Geant4_GetROIEvents.C  REST_Geant4_GetROIEvents_Fiducial.C  REST_Geant4_ListIsotopes.C  REST_Geant4_MergeFiles.C  REST_Geant4_MergeRestG4Files.C  REST_Geant4_ReadNEvents.C  REST_Geant4_ReadNEvents_inROI.C  REST_Geant4_ViewEvent.C  REST_Geant4_ViewGeometry.C
pipeline/: validateLibrary.py
src/: TRestGeant4AnalysisProcess.cxx  TRestGeant4BiasingInfo.cxx  TRestGeant4BiasingVolume.cxx  TRestGeant4BlobAnalysisProcess.cxx  TRestGeant4CosmicNeutronTaggingAnalysisProcess.cxx  TRestGeant4DataEvent.cxx  TRestGeant4DataHits.cxx  TRestGeant4DataSteps.cxx  TRestGeant4DataTrack.cxx  TRestGeant4Event.cxx  TRestGeant4EventViewer.cxx  TRestGeant4ExperimentalEvent.cxx  TRestGeant4ExperimentalStep.cxx  TRestGeant4ExperimentalTrack.cxx  TRestGeant4Geometry.cxx  TRestGeant4GeometryInfo.cxx  TRestGeant4Hits.cxx  TRestGeant4Metadata.cxx  TRestGeant4NeutronTaggingProcess.cxx  TRestGeant4Particle.cxx  TRestGeant4ParticleCollection.cxx  TRestGeant4ParticleCollectionDecay0.cxx  TRestGeant4ParticleSource.cxx  TRestGeant4ParticleSourceCosmics.cxx  TRestGeant4ParticleSourceCry.cxx  TRestGeant4ParticleSourceDecay0.cxx  TRestGeant4PhysicsInfo.cxx  TRestGeant4PhysicsLists.cxx  TRestGeant4PrimaryGenerator.cxx  TRestGeant4PrimaryGeneratorInfo.cxx  TRestGeant4QuenchingProcess.cxx  TRestGeant4Track.cxx  TRestGeant4VetoAnalysisProcess.cxx
test/: CMakeLists.txt  TRestGeant4MetadataTest.cxx
test/files/: FullAnalysis.rml  TRestGeant4Example.rml  TRestGeant4QuenchingProcessExample.rml  TRestGeant4VetoAnalysisProcessExample.rml
test/files/generators/: generator.rml
test/src/: Geant4AnalysisProcesses.cxx  Geant4QuenchingProcesses.cxx  TRestGeant4Metadata.cxx  TRestGeant4MetadataTest.cxx
